@@ -49,21 +49,6 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkButton" id="properties_button">
-	      <property name="visible">True</property>
-	      <property name="sensitive">False</property>
-	      <property name="can_default">True</property>
-	      <property name="can_focus">True</property>
-	      <property name="label">gtk-properties</property>
-	      <property name="use_stock">True</property>
-	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="focus_on_click">True</property>
-	      <property name="response_id">-10</property>
-	      <signal name="clicked" handler="_on_configure_game" last_modification_time="Thu, 09 Feb 2006 19:37:29 GMT"/>
-	    </widget>
-	  </child>
-
-	  <child>
 	    <widget class="GtkButton" id="open_button">
 	      <property name="visible">True</property>
 	      <property name="sensitive">False</property>
@@ -91,7 +76,6 @@
 	  <property name="border_width">5</property>
 	  <property name="width_request">600</property>
 	  <property name="height_request">400</property>
-	  <property name="visible">True</property>
 	  <property name="action">GTK_FILE_CHOOSER_ACTION_OPEN</property>
 	  <property name="local_only">True</property>
 	  <property name="select_multiple">False</property>
