@@ -3,6 +3,8 @@
 	* Added GConf schemas
 	* Use domain specified in defaults.py when loading Glade files
 	* Remember load and save game directories
+        * Removed load game properties (to make code simpler)
+        * Remember new game dialog properties
 
 2006-12-30  Robert Ancell  <bob27@users.sourceforge.net>
 	* Set main window title to 'Chess - game name'
